--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p id="paragraph">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </div>
       <div class="avatar">
-        <img src="assets/images/image-avatar.webp" width="40px" height="40px">
+        <img src="assets/images/image-avatar.webp" width="40px" height="40px" alt="">
           <p>Greg Hooper</p>
       </div>
     </div>
