--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="item">
       <div class="image">
-        <img src="assets/images/illustration-article.svg" alt="">
+        <img src="assets/images/illustration-article.svg" alt="ilustration">
       </div>
       <div class="texto">
         <p id="learning">Learning</p>
@@ -23,7 +23,7 @@
         <p id="paragraph">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </div>
       <div class="avatar">
-        <img src="assets/images/image-avatar.webp" width="40px" height="40px" alt="">
+        <img src="assets/images/image-avatar.webp" width="40" height="40" alt="avatar">
           <p>Greg Hooper</p>
       </div>
     </div>
